compiler/fir/analysis-tests/testData/resolve/suppress/ignoreAttributeInComments.kt
// <!IGNORE_SINGLE_LINE!>ignore singleline<!>

/*
    <!IGNORE_MULTI_LINE!>ignore multiline<!> *
 */